--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <title>application-tile demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
@@ -11,19 +11,18 @@
 
     <link rel="import" href="../application-tile.html">
 
-    <style is="custom-style" include="demo-pages-shared-styles">
-    </style>
-  </head>
-  <body>
+    <style is="custom-style" include="demo-pages-shared-styles"></style>
+</head>
+<body>
 
-    <div class="vertical-section-container centered">
-      <h3>Basic application-tile Demo</h3>
-      <demo-snippet>
+<div class="vertical-section-container centered">
+    <h3>Basic application-tile Demo</h3>
+    <demo-snippet>
         <template>
-          <application-tile></application-tile>
+            <application-tile></application-tile>
         </template>
-      </demo-snippet>
-    </div>
+    </demo-snippet>
+</div>
 
-  </body>
+</body>
 </html>
