Change name from application to item

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>application-tile demo</title>
+    <title>item-tile demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
@@ -9,17 +9,17 @@
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
 
-    <link rel="import" href="../application-tile.html">
+    <link rel="import" href="../item-tile.html">
 
     <style is="custom-style" include="demo-pages-shared-styles"></style>
 </head>
 <body>
 
 <div class="vertical-section-container centered">
-    <h3>Basic application-tile Demo</h3>
+    <h3>Basic item-tile Demo</h3>
     <demo-snippet>
         <template>
-            <application-tile></application-tile>
+            <item-tile></item-tile>
         </template>
     </demo-snippet>
 </div>
