--- a/item-tile.html
+++ b/item-tile.html
@@ -39,7 +39,8 @@ Custom property | Description | Default
             :host {
                 display: none;
                 text-align: center;
-                max-width: 160px;
+                min-width: 160px;
+                max-width: 180px;
                 height: 150px;
                 padding: 30px 0 0 0;
                 position: relative;
@@ -57,10 +58,11 @@ Custom property | Description | Default
             :host:hover {
                 @apply(--shadow-elevation-4dp);
             }
-            :host h3 {
+            :host .item-title {
                 @apply(--paper-font-caption);
                 font-size: 14px;
                 margin: 14px 0 0 0;
+                padding: 0 6px;
             }
             :host a {
                 text-decoration: none;
@@ -95,7 +97,7 @@ Custom property | Description | Default
         </style>
 
         <iron-image sizing="contain" preload fade src="[[ itemIcon ]]"></iron-image>
-        <h3>[[ itemTitle ]]</h3>
+        <h3 class="item-title">[[ itemTitle ]]</h3>
 
         <div class="actions">
             <paper-button id="infoAction" class="pull-left">Info</paper-button>
